@@ -75,7 +75,7 @@ dfsch_object_t* dfsch_thread_join(dfsch_object_t* thread){
   thread_t* t;
   dfsch_object_t* ret;
   int err;
-  if (!thread || thread->type != &thread_type)
+  if (DFSCH_TYPE_OF(thread) != &thread_type)
     dfsch_error("thread:not-a-thread", thread);
 
   t = (thread_t*)thread;
@@ -91,7 +91,7 @@ dfsch_object_t* dfsch_thread_join(dfsch_object_t* thread){
 void dfsch_thread_detach(dfsch_object_t* thread){
   thread_t* t;
   int err;
-  if (!thread || thread->type != &thread_type)
+  if (DFSCH_TYPE_OF(thread) != &thread_type)
     dfsch_error("thread:not-a-thread", thread);
 
   t = (thread_t*)thread;
@@ -155,7 +155,7 @@ dfsch_object_t* dfsch_mutex_create(){
 void dfsch_mutex_lock(dfsch_object_t* mutex){
   mutex_t* m;
   int err;
-  if (!mutex || mutex->type != &mutex_type)
+  if (DFSCH_TYPE_OF(mutex) != &mutex_type)
     dfsch_error("thread:not-a-mutex", mutex);
 
   m = (mutex_t*)mutex;
@@ -168,7 +168,7 @@ void dfsch_mutex_lock(dfsch_object_t* mutex){
 }
 int dfsch_mutex_trylock(dfsch_object_t* mutex){
   mutex_t* m;
-  if (!mutex || mutex->type != &mutex_type)
+  if (DFSCH_TYPE_OF(mutex) != &mutex_type)
     dfsch_error("thread:not-a-mutex", mutex);
 
   m = (mutex_t*)mutex;
@@ -178,7 +178,7 @@ int dfsch_mutex_trylock(dfsch_object_t* mutex){
 void dfsch_mutex_unlock(dfsch_object_t* mutex){
   mutex_t* m;
   int err;
-  if (!mutex || mutex->type != &mutex_type)
+  if (DFSCH_TYPE_OF(mutex) != &mutex_type)
     dfsch_error("thread:not-a-mutex", mutex);
 
   m = (mutex_t*)mutex;
@@ -233,9 +233,9 @@ void dfsch_condition_wait(dfsch_object_t* cond, dfsch_object_t* mutex){
   int err;
   mutex_t* m;
 
-  if (!mutex || mutex->type != &mutex_type)
+  if (DFSCH_TYPE_OF(mutex) != &mutex_type)
     dfsch_error("thread:not-a-mutex", mutex);
-  if (!cond || cond->type != &condition_type)
+  if (DFSCH_TYPE_OF(cond) != &condition_type)
     dfsch_error("thread:not-a-condition", cond);
 
   c = (condition_t*)cond;
@@ -251,7 +251,7 @@ void dfsch_condition_wait(dfsch_object_t* cond, dfsch_object_t* mutex){
 void dfsch_condition_signal(dfsch_object_t* cond){
   condition_t* c;
   int err;
-  if (!cond || cond->type != &condition_type)
+  if (DFSCH_TYPE_OF(cond) != &condition_type)
     dfsch_error("thread:not-a-condition", cond);
 
   c = (condition_t*)cond;
@@ -266,7 +266,7 @@ void dfsch_condition_signal(dfsch_object_t* cond){
 void dfsch_condition_broadcast(dfsch_object_t* cond){
   condition_t* c;
   int err;
-  if (!cond || cond->type != &condition_type)
+  if (DFSCH_TYPE_OF(cond) != &condition_type)
     dfsch_error("thread:not-a-condition", cond);
 
   c = (condition_t*)cond;
@@ -334,7 +334,7 @@ dfsch_object_t* dfsch_channel_read(dfsch_object_t* channel){
    * fundamentaly wrong, so we don't bother to check for them.
    */
 
-  if (!channel || channel->type != &channel_type)
+  if (DFSCH_TYPE_OF(channel) != &channel_type)
     dfsch_error("thread:not-a-channel", channel);
   
   ch = (channel_t*) channel;
@@ -365,7 +365,7 @@ void dfsch_channel_write(dfsch_object_t* channel,
    * fundamentaly wrong, so we don't bother to check for them.
    */
 
-  if (!channel || channel->type != &channel_type)
+  if (DFSCH_TYPE_OF(channel) != &channel_type)
     dfsch_error("thread:not-a-channel", channel);
   
   ch = (channel_t*) channel;
