@@ -75,7 +75,7 @@ dfsch_object_t* dfsch_make_weak_reference(dfsch_object_t* refered){
 
 int dfsch_weak_reference_live_p(dfsch_object_t* reference){
   reference_t* ref;
-  if (!reference || reference->type != &reference_type)
+  if (DFSCH_TYPE_OF(reference) != &reference_type)
     dfsch_error("exception:not-a-reference", reference);
   ref = (reference_t*) reference;
 
@@ -93,7 +93,7 @@ dfsch_object_t* dereference(reference_t* ref){
 
 dfsch_object_t* dfsch_weak_reference_dereference(dfsch_object_t* reference){
   reference_t* ref;
-  if (!reference || reference->type != &reference_type)
+  if (DFSCH_TYPE_OF(reference) != &reference_type)
     dfsch_error("exception:not-a-reference", reference);
   ref = (reference_t*) reference;
 
@@ -152,7 +152,7 @@ dfsch_object_t* dfsch_make_weak_vector(size_t length, dfsch_object_t* fill){
   return (dfsch_object_t*)v;
 }
 size_t dfsch_weak_vector_length(dfsch_object_t *vector){
-  if (!vector || vector->type != &weak_vector_type)
+  if (DFSCH_TYPE_OF(vector) != &weak_vector_type)
     return 0;
 
   return ((weak_vector_t*)vector)->length;  
@@ -160,7 +160,7 @@ size_t dfsch_weak_vector_length(dfsch_object_t *vector){
 
 dfsch_object_t** dfsch_weak_vector_as_array(dfsch_object_t *vector, 
                                             size_t *length){
-  if (!vector || vector->type != &weak_vector_type)
+  if (DFSCH_TYPE_OF(vector) != &weak_vector_type)
     dfsch_error("exception:not-a-weak-vector",vector);
 
   if (length){
@@ -190,7 +190,7 @@ dfsch_object_t* dfsch_weak_vector_from_array(dfsch_object_t **array,
 dfsch_object_t* dfsch_weak_vector_ref(dfsch_object_t *vector, size_t k){
   weak_vector_t* v;
 
-  if (!vector || vector->type != &weak_vector_type)
+  if (DFSCH_TYPE_OF(vector) != &weak_vector_type)
     dfsch_error("exception:not-a-weak-vector",vector);
 
   return v->data[k];
@@ -200,7 +200,7 @@ dfsch_object_t* dfsch_weak_vector_set(dfsch_object_t* vector, size_t k,
                                       dfsch_object_t* obj){
   weak_vector_t* v;
 
-  if (!vector || vector->type != &weak_vector_type)
+  if (DFSCH_TYPE_OF(vector) != &weak_vector_type)
     dfsch_error("exception:not-a-weak-vector",vector);
 
   v = (weak_vector_t*) vector;
@@ -221,7 +221,7 @@ dfsch_object_t* dfsch_weak_vector_set(dfsch_object_t* vector, size_t k,
 
 dfsch_object_t* dfsch_weak_vector_2_list(dfsch_object_t* vector){
 
-  if (!vector || vector->type != &weak_vector_type)
+  if (DFSCH_TYPE_OF(vector) != &weak_vector_type)
     dfsch_error("exception:not-a-vector",vector);
 
   return dfsch_list_from_array(((weak_vector_t*)vector)->data, 
