@@ -2,6 +2,8 @@
 
 	* src/object.c: use DFSCH_TYPE_OF instead of direct acess to type
 	field
+	
+	* Mass replace of DFSCH_TYPE_OF
 
 2008-04-03  Ales Hakl  <ales at hakl dot net>
 
